--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bulma": "^0.9.4",
     "meteor-node-stubs": "^1.2.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-select": "^5.7.0"
   },
   "meteor": {
     "mainModule": {
